--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,11 +2,13 @@
 
 $primary: #f4e041;
 $secondary: #00bdd3;
-$bg-color: #f8f8f8;
-$color-dark-xl: #000;
+$bg-color-light-xl: #fff;
+$bg-color-light-x: #f8f8f8;
+$color-dark-xl: rgba(0, 0, 0, 0.85);
+$border: 1px solid #e0e0e0;
 
 $main-font: 'Nunito', sans-serif;
-$accent-font: 'Nunito', sans-serif;
+$accent-font: 'Asap', sans-serif;
 
 /* 16px */
 $font-size-default: 1.6rem;
