--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,3 +10,8 @@
 //		Components
 //*********************************************
 @import './components/all';
+
+//*********************************************
+//		UI
+//*********************************************
+@import './UI/all';
