--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -32,3 +32,68 @@ body {
   font-family: $main-font;
   line-height: 26px;
 }
+
+img,
+.img {
+  display: block;
+  height: 100%;
+  object-fit: cover;
+}
+
+button {
+  border: none;
+  box-shadow: none;
+  cursor: pointer;
+
+  user-select: none;
+}
+
+a {
+  font-size: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  line-height: inherit;
+}
+
+.hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+
+  opacity: 0;
+
+  clip: rect(0 0 0 0);
+}
+
+.container {
+  max-width: 1202px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 4;
+
+  width: 100%;
+  height: 100vh;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+
+  transition: opacity 300ms ease-in;
+
+  pointer-events: none;
+
+  &--active {
+    opacity: 1;
+
+    pointer-events: auto;
+  }
+}
