--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -1,3 +1,6 @@
-p {
-  font-size: 2rem;
-}
+@import './header';
+@import './footer';
+@import './layout';
+@import './nav-list';
+@import './nav';
+@import './menu';
