feat: implement components: Hero, InfoBlock, BG, fix components: Heading, Font, Button

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,12 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 3;
+
   grid-area: header;
+  width: 100%;
+  height: 60px;
 
   &--bg {
     background-color: $bg-color-light-xl;
