--- a/src/scss/UI/Button/_button.scss
+++ b/src/scss/UI/Button/_button.scss
@@ -1,9 +1,8 @@
 .button {
-  padding: 13px 16px;
+  height: 50px;
+  padding: 12px 47px;
 
   color: $color-dark-xl;
-  font-size: 1.8rem;
-  font-family: $accent-font;
 
   background: $primary;
   border-radius: 80px;
