feat: implement components: OurUsers, Card, Image, Tooltip, fix Heading, BG components, add styles components

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -27,6 +27,7 @@ body {
 
   overflow-x: hidden;
 
+  color: $color-dark-xl;
   font-weight: 400;
   font-size: $font-size-default;
   font-family: $main-font;
