feat: implement Preloader component, validationError func, add a request to receive cards, fix components: Button, OurUsers, Image

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -6,6 +6,7 @@ $bg-color-light-xl: #fff;
 $bg-color-light-x: #f8f8f8;
 $color-dark-xl: rgba(0, 0, 0, 0.87);
 $border: 1px solid #e0e0e0;
+$btn-disabled: #b4b4b4;
 
 $main-font: 'Nunito', sans-serif;
 $accent-font: 'Asap', sans-serif;
