--- a/src/scss/UI/Button/_button.scss
+++ b/src/scss/UI/Button/_button.scss
@@ -1,9 +1,76 @@
 .button {
+  position: relative;
+
   height: 50px;
   padding: 12px 47px;
+  overflow: hidden;
 
   color: $color-dark-xl;
 
   background: $primary;
   border-radius: 80px;
+
+  transition: all 250ms;
+
+  &:disabled {
+    color: #fff;
+
+    background-color: $btn-disabled;
+  }
+
+  &:hover {
+    background-color: #ffe302;
+  }
+
+  &::before,
+  &::after {
+    position: absolute;
+
+    background-color: rgba(126, 126, 126, 0.5);
+    border-radius: 80px;
+    opacity: 0;
+
+    transition: width 200ms, opacity 250ms;
+
+    content: '';
+  }
+
+  &::before {
+    top: 50%;
+    left: calc(50% - 14px);
+
+    width: 0;
+    height: 100%;
+    margin: 0 14px;
+
+    transform: translate(-50%, -50%);
+  }
+
+  &:focus::before {
+    width: calc(100% - 28px);
+
+    opacity: 1;
+  }
+
+  &::after {
+    top: 0;
+    left: calc(50% - 7px);
+
+    width: 0;
+    height: 86px;
+    margin: 0 7px;
+
+    transform: translate(-50%, 0);
+  }
+
+  &:active::after {
+    width: calc(100% - 14px);
+
+    opacity: 1;
+  }
+
+  > * {
+    position: relative;
+    z-index: 1;
+  }
 }
