feat: implement Sign up form, footer, add components: Radio, Input, SelectPos, FileUpload, fix styles

--- a/src/scss/UI/Button/_button.scss
+++ b/src/scss/UI/Button/_button.scss
@@ -16,6 +16,13 @@
     color: #fff;
 
     background-color: $btn-disabled;
+
+    &:hover,
+    &:focus {
+      color: #fff;
+
+      background-color: $btn-disabled;
+    }
   }
 
   &:hover {
