--- a/src/scss/UI/all.scss
+++ b/src/scss/UI/all.scss
@@ -6,3 +6,6 @@
 @import 'bg';
 @import 'tooltip';
 @import 'preloader';
+@import 'FormControls/input';
+@import 'FormControls/radio-btn';
+@import 'FormControls/file-upload';
