--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,6 +2,7 @@
 
 $primary: #f4e041;
 $secondary: #00bdd3;
+$error: #cb3d40;
 $bg-color-light-xl: #fff;
 $bg-color-light-x: #f8f8f8;
 $color-dark-xl: rgba(0, 0, 0, 0.87);
