--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -8,3 +8,6 @@
 @import './info-block';
 @import './our-users';
 @import './card';
+@import './sign-up';
+@import './sign-up-form';
+@import './select-pos';
