--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -32,6 +32,8 @@ body {
   font-size: $font-size-default;
   font-family: $main-font;
   line-height: 26px;
+
+  background-color: $bg-color-light-x;
 }
 
 img,
@@ -39,6 +41,12 @@ img,
   display: block;
   height: 100%;
   object-fit: cover;
+}
+
+input {
+  font-size: 1.6rem;
+  font-family: 'Nunito', sans-serif;
+  line-height: 1.6em;
 }
 
 button {
