--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -12,11 +12,13 @@
   left: 0;
 
   width: 100%;
-  min-height: 650px;
+  height: 710px;
   padding-top: 60px;
 
   img {
+    width: 100%;
     margin: 0 auto;
+    object-fit: cover;
   }
 }
 
@@ -44,4 +46,67 @@
 .hero__info-text {
   max-width: 527px;
   margin-bottom: 25px;
+}
+
+@media screen and (max-width: 1024px) {
+  .hero {
+    margin-bottom: 175px;
+  }
+
+  .hero__info-container {
+    max-width: 936px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__info-container {
+    justify-content: flex-start;
+    max-width: 736px;
+    padding: 82px 16px 20px;
+  }
+
+  .hero__info {
+    max-width: 405px;
+  }
+
+  .hero {
+    height: 500px;
+    min-height: auto;
+    margin-bottom: 160px;
+  }
+
+  .hero__img {
+    height: 560px;
+  }
+
+  .hero__info-text {
+    margin-bottom: 33px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .hero {
+    height: 469px;
+    margin-bottom: 144px;
+  }
+
+  .hero__info-container {
+    max-width: 360px;
+    padding-top: 53px;
+  }
+
+  .hero__info {
+    max-width: 248px;
+  }
+
+  .hero__img {
+    display: flex;
+    align-items: flex-end;
+    height: 529px;
+
+    img {
+      height: 380px;
+      object-position: top 23px right -65px;
+    }
+  }
 }
