--- a/src/scss/UI/FormControls/_input.scss
+++ b/src/scss/UI/FormControls/_input.scss
@@ -56,6 +56,10 @@
     transition: all 300ms;
 
     pointer-events: none;
+
+    span {
+      flex-shrink: 0;
+    }
   }
 
   .input-control__helper {
