--- a/src/scss/components/_select-pos.scss
+++ b/src/scss/components/_select-pos.scss
@@ -1,4 +1,6 @@
 .select-pos {
+  position: relative;
+
   text-align: left;
 }
 
@@ -8,4 +10,23 @@
 
 .select-pos__radio > label {
   margin-bottom: 2px;
+}
+
+.select-pos__helper {
+  position: absolute;
+
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 4px 0 0;
+  padding: 0 16px;
+
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 1.2rem;
+  font-family: 'Asap', sans-serif;
+  line-height: 1.4em;
+
+  transition: all 250ms;
+
+  pointer-events: none;
 }
