--- a/src/scss/components/_sign-up.scss
+++ b/src/scss/components/_sign-up.scss
@@ -11,8 +11,36 @@
 }
 
 .sign-up__form-box {
+  position: relative;
+
   max-width: 380px;
   margin: 0 auto;
+}
+
+.sign-up__error-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+
+  color: $error;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+
+  pointer-events: none;
+
+  &.active {
+    opacity: 1;
+
+    pointer-events: auto;
+  }
 }
 
 @media screen and (max-width: 560px) {
