--- a/src/scss/components/_our-users.scss
+++ b/src/scss/components/_our-users.scss
@@ -34,6 +34,32 @@
   }
 }
 
+.our-users__errors-box {
+  position: absolute;
+  top: 20px;
+  right: 50%;
+  left: 50%;
+
+  width: 100%;
+
+  color: $error;
+  text-align: center;
+
+  transform: translateX(-50%);
+
+  > div {
+    max-width: 360px;
+    margin: 0 auto;
+    padding: 10px;
+
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  ul {
+    text-align: left;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .our-users__cards {
     grid-auto-rows: 313px;
