feat: add preloader pages, removed unnecessary fonts, optimization of light house metrics

--- a/src/scss/UI/FormControls/_input.scss
+++ b/src/scss/UI/FormControls/_input.scss
@@ -14,7 +14,7 @@
     font-family: $accent-font;
     line-height: 1.6em;
 
-    background-color: $bg-color-light-xl;
+    background-color: $bg-color-light-x;
     border: 1px solid #d0cfcf;
     border-radius: 4px;
     outline: none;
